added description in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: url_launcher_plus
-description: A new Flutter package project.
+description: Customizable url launcher with AppBar for navigation and also a refresh button available
 version: 0.0.1
 homepage: https://github.com/swarajkumarsingh/url_launcher_plus
 
